--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -33,7 +33,7 @@
                 <FrameLayout
                     android:id="@+id/video_view"
                     android:layout_width="0dp"
-                    android:layout_height="350dp"
+                    android:layout_height="350"
                     app:layout_constraintEnd_toEndOf="@+id/video_control"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
