--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -46,7 +46,7 @@
 
                         <VideoView
                             android:id="@+id/video_view_selected"
-                            android:layout_width="wrap_content"
+                            android:layout_width="600dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="8dp"
                             android:layout_marginStart="8dp"
@@ -134,13 +134,14 @@
                 app:layout_constraintVertical_bias="0.0">
 
                 <ScrollView
+                    android:id="@+id/scroll_timeline"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                     <RelativeLayout
                         android:id="@+id/time_lines_container"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
 
                         <LinearLayout
                             android:id="@+id/ll_main_playvideo"
@@ -155,7 +156,7 @@
                         <SeekBar
                             android:id="@+id/seek_bar_selected"
                             android:layout_width="824dp"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentTop="true"
                             android:clickable="false"
