--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -67,17 +67,18 @@
             tools:layout_editor_absoluteX="449dp"
             tools:layout_editor_absoluteY="50dp" />
 
-        <ImageView
+        <Button
             android:id="@+id/btn_add"
-            android:layout_width="40dp"
+            android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="16dp"
             android:layout_weight="1"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            app:srcCompat="@drawable/icons8_coche_96_1"
-            tools:layout_editor_absoluteX="717dp"
+            android:background="@drawable/style_button_white"
+            android:text="Ajouter un tag"
+            tools:layout_editor_absoluteX="449dp"
             tools:layout_editor_absoluteY="50dp" />
+
     </LinearLayout>
 
 
