--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -47,7 +47,7 @@
                         <VideoView
                             android:id="@+id/video_view_selected"
                             android:layout_width="600dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="350dp"
                             android:layout_margin="8dp"
                             android:layout_marginStart="8dp"
                             app:layout_constraintEnd_toEndOf="parent"
