--- a/app/src/main/res/layout/simple_spinner.xml
+++ b/app/src/main/res/layout/simple_spinner.xml
@@ -28,4 +28,5 @@ Ajout du paramètre couleur de texte
     android:layout_width="match_parent"
     android:layout_height="?attr/dropdownListPreferredItemHeight"
     android:ellipsize="marquee"
-    android:textColor="@color/white"/>
+    android:textColor="@color/white"
+    />
