--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -118,6 +118,7 @@
                         android:text="@string/connected_maj"
                         android:textColor="@color/white"
 
+                        android:textSize="16sp"
                         app:layout_constraintEnd_toEndOf="parent" />
 
                 </android.support.constraint.ConstraintLayout>
