--- a/app/src/main/res/layout-land/activity_info_video.xml
+++ b/app/src/main/res/layout-land/activity_info_video.xml
@@ -31,6 +31,7 @@
             android:background="@drawable/style_button"
             android:text="@string/edit"
             android:textColor="@color/white"
+            android:textSize="18sp"
             app:fontFamily="@font/roboto_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -92,6 +93,7 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/style_button_white"
             android:text="@string/delete"
+            android:textSize="18sp"
             app:fontFamily="@font/roboto_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bt_edit" />
