--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -213,6 +213,7 @@
                     android:background="@null"
                     android:text="@string/back_to_main"
                     android:textColor="@color/white"
+                    android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <Button
@@ -222,7 +223,8 @@
                     android:layout_marginLeft="36dp"
                     android:background="@drawable/style_button"
                     android:text="@string/show_video"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
