--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -27,7 +27,7 @@
                 android:layout_marginBottom="40dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 android:layout_weight="0.3"
                 android:orientation="vertical">
 
@@ -39,8 +39,8 @@
                         android:id="@+id/vv_preview"
                         android:layout_width="match_parent"
                         android:layout_height="217dp"
-                        app:srcCompat="@android:color/darker_gray"
-                        android:alpha="0.3"/>
+                        android:alpha="0.3"
+                        app:srcCompat="@android:color/darker_gray" />
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
                         app:layout_constraintEnd_toEndOf="@+id/vv_preview"
                         app:layout_constraintStart_toStartOf="@id/vv_preview"
                         app:layout_constraintTop_toTopOf="@+id/vv_preview"
-                        app:srcCompat="@drawable/icons8_lecture_de_youtube_100"/>
+                        app:srcCompat="@drawable/icons8_lecture_de_youtube_100" />
 
                 </android.support.constraint.ConstraintLayout>
 
@@ -58,10 +58,10 @@
                     android:id="@+id/tv_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/video_tittle"
                     android:layout_marginTop="8dp"
+                    android:text="@string/video_tittle"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     app:fontFamily="@font/roboto_bold" />
 
                 <TextView
@@ -72,7 +72,7 @@
                     android:layout_marginTop="8dp"
                     android:text="@string/no_description"
                     android:textColor="@color/white"
-                    android:textSize="12sp"
+                    android:textSize="16sp"
                     app:fontFamily="@font/roboto" />
 
                 <LinearLayout
@@ -92,6 +92,7 @@
                         android:background="@drawable/style_button"
                         android:text="@string/play_video"
                         android:textColor="@color/white"
+                        android:textSize="18sp"
                         app:fontFamily="@font/roboto_bold" />
 
                     <Button
@@ -105,6 +106,7 @@
                         android:background="@drawable/style_button_white"
                         android:text="@string/edit"
                         android:textColor="@color/colorBlack"
+                        android:textSize="18sp"
                         app:fontFamily="@font/roboto_bold" />
 
                     <Button
