--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -236,6 +236,7 @@
                             android:background="@drawable/style_button"
                             android:text="@string/go"
                             android:textColor="@color/white"
+                            android:textSize="18sp"
                             app:fontFamily="@font/roboto"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
