--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -108,6 +108,7 @@
             android:background="@drawable/style_button"
             android:text="@string/end"
             android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
     </android.support.constraint.ConstraintLayout>
