--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -235,6 +235,7 @@
                         android:background="@drawable/style_button"
                         android:text="@string/go"
                         android:textColor="@color/white"
+                        android:textSize="18sp"
                         app:fontFamily="@font/roboto"
                         app:layout_constraintBottom_toBottomOf="@+id/ll_create_grid"
                         app:layout_constraintEnd_toEndOf="parent" />
