--- a/app/src/main/res/layout-land/activity_connexion.xml
+++ b/app/src/main/res/layout-land/activity_connexion.xml
@@ -13,7 +13,7 @@
         tools:layout_editor_absoluteX="330dp"
         tools:layout_editor_absoluteY="315dp">
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -30,11 +30,12 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/vyfe_blanc" />
+                app:srcCompat="@drawable/vyfe_blanc"
+                android:layout_gravity="center_horizontal"/>
 
             <LinearLayout
                 android:id="@+id/linear_layout_add"
-                android:layout_width="wrap_content"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
@@ -44,7 +45,8 @@
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_logo">
+                app:layout_constraintTop_toBottomOf="@+id/iv_logo"
+                android:layout_gravity="center_horizontal">
 
                 <TextView
                     android:id="@+id/tv_connected"
@@ -58,7 +60,7 @@
 
                 <EditText
                     android:id="@+id/et_mail"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/style_input"
@@ -75,7 +77,7 @@
 
                 <EditText
                     android:id="@+id/et_password"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginTop="12dp"
                     android:background="@drawable/style_input"
@@ -89,7 +91,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/et_mail" />
 
-                <android.support.constraint.ConstraintLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -104,24 +106,21 @@
                         android:fontFamily="@font/roboto"
                         android:text="@string/lost_password"
                         android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:textColor="@color/white" />
 
                     <Button
                         android:id="@+id/btn_connected"
                         style="@style/Widget.AppCompat.Button.Small"
-                        android:layout_width="134dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="30dp"
                         android:background="@drawable/style_button"
                         android:fontFamily="@font/roboto_bold"
                         android:text="@string/connected_maj"
                         android:textColor="@color/white"
-
                         android:textSize="16sp"
-                        app:layout_constraintEnd_toEndOf="parent" />
+                        android:layout_marginLeft="32dp"/>
 
-                </android.support.constraint.ConstraintLayout>
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -139,11 +138,9 @@
                 android:text="@string/create_account"
                 android:textColor="@color/white"
                 android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linear_layout_add" />
+                android:layout_gravity="center_horizontal"/>
 
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
     </ScrollView>
 
 
