eviter duplication grille dans spinner

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="colorWhiteTwo">#d8d8d8</color>
 
 
-    <color name="colorSlateGrey">#5B6C70</color>
+    <color name="colorSlateGrey">#676d6f</color>
     <color name="colorBlack">#2E2d2d</color>
     <color name="colorDarkBlueGrey25">#3f0d1725</color>
     <color name="colorWarmGrey">#474747</color>
