--- a/app/src/main/res/layout-land/activity_my_video.xml
+++ b/app/src/main/res/layout-land/activity_my_video.xml
@@ -37,6 +37,7 @@
                 android:id="@+id/grid_videos"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:columnWidth="150dp"
                 android:gravity="center"
