--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -63,7 +63,7 @@
                             android:layout_marginTop="92dp"
                             android:clickable="true"
                             android:src="@android:drawable/ic_media_play"
-                            app:backgroundTint="@color/colorLightGreenishBlue"
+                            app:backgroundTint="@color/color12"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
@@ -76,7 +76,7 @@
                             android:layout_marginTop="16dp"
                             android:clickable="true"
                             android:longClickable="false"
-                            app:backgroundTint="@color/colorTiffanyBlue"
+                            app:backgroundTint="@color/color2"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/bt_play_selected"
                             app:srcCompat="@drawable/replay_black" />
