--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="35dp"
-    android:layout_marginBottom="5dp"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
     tools:layout_editor_absoluteY="25dp">
 
     <android.support.constraint.ConstraintLayout
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/iv_color"
-            android:layout_width="5dp"
-            android:layout_height="40dp"
+            android:layout_width="10dp"
+            android:layout_height="50dp"
             android:background="@android:color/holo_blue_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,15 +25,17 @@
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="300dp"
-            android:layout_height="35dp"
-            android:layout_marginLeft="12dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
             android:gravity="center_vertical"
             android:maxLength="30"
             android:text="@string/name_observation"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="20sp"
             app:fontFamily="@font/roboto"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_color"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,12 +44,15 @@
             android:id="@+id/tv_stats"
             android:layout_width="35dp"
             android:layout_height="35dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             android:gravity="center_vertical"
             android:textColor="@android:color/white"
             android:visibility="gone"
             app:fontFamily="@font/roboto"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:visibility="visible" />
