--- a/app/src/main/res/layout-land/activity_my_video.xml
+++ b/app/src/main/res/layout-land/activity_my_video.xml
@@ -15,13 +15,13 @@
         android:layout_width="match_parent"/>
 
     <ScrollView
+        android:id="@+id/scroll_grid"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
 
@@ -36,7 +36,7 @@
             <GridView
                 android:id="@+id/grid_videos"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:layout_weight="1"
                 android:columnWidth="150dp"
