--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -58,7 +58,7 @@
         <Button
             android:id="@+id/btn_chosse_color"
             android:layout_width="100dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
             android:layout_weight="1"
@@ -70,7 +70,7 @@
         <Button
             android:id="@+id/btn_add"
             android:layout_width="100dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
             android:layout_weight="1"
@@ -85,7 +85,7 @@
         <android.support.v7.widget.RecyclerView
 
             android:id="@+id/recycler_view"
-            android:layout_width="302dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
