--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,63 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img_item_video"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:layout_weight="1"
-        android:alpha="0.3"
-        app:srcCompat="@android:color/darker_gray" />
-
-    <LinearLayout
-        android:id="@+id/title_video_container"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/img_item_video">
-
-        <ImageView
-            android:id="@+id/img_upload_video"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/icons8_stockage_cloud_priv__96" />
-
-        <TextView
-            android:id="@+id/title_video"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="1"
-            android:text="@string/title_video"
-            android:textColor="@color/white"
-            app:fontFamily="@font/roboto" />
+            android:layout_gravity="center">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/img_item_video"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:alpha="0.3"
+                app:srcCompat="@android:color/darker_gray" />
 
-    <TextView
-        android:id="@+id/video_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/date"
-        android:textColor="@color/white"
-        app:fontFamily="@font/roboto"
-        app:layout_constraintTop_toBottomOf="@id/title_video_container"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                app:srcCompat="@drawable/icons8_lecture_de_youtube_100" />
+        </RelativeLayout>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        app:layout_constraintBottom_toBottomOf="@+id/img_item_video"
-        app:layout_constraintEnd_toEndOf="@+id/img_item_video"
-        app:layout_constraintStart_toStartOf="@id/img_item_video"
-        app:layout_constraintTop_toTopOf="@+id/img_item_video"
-        app:srcCompat="@drawable/icons8_lecture_de_youtube_100" />
+        <LinearLayout
+            android:id="@+id/title_video_container"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/img_upload_video"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/icons8_stockage_cloud_priv__96" />
 
-</android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/title_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:text="@string/title_video"
+                android:textColor="@color/white"
+                app:fontFamily="@font/roboto" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/video_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/date"
+                android:textColor="@color/white"
+                app:fontFamily="@font/roboto"
+                />
+        </LinearLayout>
+
+</LinearLayout>
