--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -198,6 +198,13 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/tv_my_analyse" />
 
+                        <ProgressBar
+                            android:id="@+id/pb_load"
+                            style="?android:attr/progressBarStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:visibility="gone"/>
+
                         <Spinner
                             android:id="@+id/spinner_session_infos"
                             android:layout_width="wrap_content"
