--- a/app/src/main/res/layout-land/activity_info_video.xml
+++ b/app/src/main/res/layout-land/activity_info_video.xml
@@ -24,7 +24,7 @@
         <Button
             android:id="@+id/bt_edit"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="60dp"
             android:layout_marginRight="60dp"
             android:layout_marginTop="100dp"
@@ -87,7 +87,7 @@
         <Button
             android:id="@+id/btn_delete"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="60dp"
             android:layout_marginRight="60dp"
             android:layout_marginTop="20dp"
