--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -148,8 +148,8 @@
 
                             <ImageView
                                 android:id="@+id/fab_add_moment"
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
                                 android:clickable="true"
                                 android:src="@drawable/icons8_plus_96"
                                 app:layout_constraintStart_toStartOf="parent"
@@ -233,13 +233,28 @@
                             android:layout_height="wrap_content"
                             android:visibility="gone" />
 
+                        <TextView
+                            android:id="@+id/tv_title_grid_import"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="40dp"
+                            android:layout_marginStart="40dp"
+                            android:layout_marginTop="10dp"
+                            android:text="Titre de la grille importée :"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            android:visibility="gone"
+                            app:fontFamily="@font/roboto"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/tv_information" />
+
                         <Spinner
                             android:id="@+id/spinner_session_infos"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="32dp"
                             android:layout_marginStart="32dp"
-                            android:layout_marginTop="0dp"
+                            android:layout_marginTop="20dp"
                             android:background="@drawable/style_input"
                             android:visibility="invisible"
                             app:layout_constraintStart_toStartOf="parent"
